--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@
 ul{
     list-style: none;
     li{
-        margin-bottom: 1rem;
         font-size: 1.3rem;
+        border-bottom: 1px solid grey;
     }
+}
+
+.email_list{
+    border-radius: 10px;
 }
